docs: packaging and CI, including the macOS bundle-version caveat